--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_api_key: 'f40fbf74-5529-452f-8a32-48c8dd5c5dc1'
           heroku_app_name: 'github-actions-herok' #Must be unique in Heroku
           heroku_email: 'dgldoge1@gmail.com'
